--- a/boxify.html
+++ b/boxify.html
@@ -5,133 +5,132 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <link rel="stylesheet" href="css/boxify.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+  <link rel="stylesheet" href="css/boxify.css">
 </head>
 <body>
-  <!-- HEADER STARTED -->
   <div class="header">
-    <div class="width">
+    <div class="header_item">
       <div class="nav">
-        <div class="logo"></div>
-        <div class="menu">
-          <p>MENU</p>
-          <i class="fa fa-bars" aria-hidden="true"></i>
-        </div>
-      </div>
-      <div class="center">
-        <div class="words"><h1>An Exclusive, Premium HTML5 & CSS3 Template created exlusively for Codrops.</h1></div>
-        <div class="button">
-          <button>Use it for free</button>
-          <button>Learn more <i class="fa fa-arrow-down" aria-hidden="true"></i></button>
-        </div>
+        <img src="img/logo-white.png" alt="">
+        <i class="fa fa-bars" aria-hidden="true"></i>
+        <p>MENU</p>
       </div>
     </div>
+    <div class="main">
+      <h1>An Exclusive, Premium HTML5 & CSS3 Template created exlusively for Codrops.</h1>
+    </div>
+    <div class="button">
+      <button>Use it for free</button>
+      <button>Learn more <i class="fa fa-arrow-down" aria-hidden="true"></i></button>
+    </div>
   </div>
-  <!-- HEADER FINISHED -->
-  <!-- VIDEO STARTED -->
   <div class="video">
-
-  <img src="img/avatar.png" alt="">
-  <p class="video_item">Watch the Video</p>
-
-
-    <!-- <div class="video_icon"><i class="fa fa-play-circle-o" aria-hidden="true"></i></div>
-    <div class="video_words"><p class="video_item">Watch the Video</p></div> -->
+      <a href="https://www.youtube.com"><i class="fa fa-play-circle-o" aria-hidden="true"></i> <span> Watch the Video</span></a>
   </div>
-  <!-- VIDEO FINISHED -->
-  <!-- FORE FRONT STARTED -->
-  <div class="fore_front">
-    <div class="fore_front_lft">
-      <div class="fore_front_lft_image"></div>
+  <div class="slider">
+    <div class="slider_lft">
+      <img src="img/html5-logo.png" alt="">
     </div>
-    <div class="fore_front_rght">
-      <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      <a href="#">Find out why this freebie rocks! <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+    <div class="slider_rght">
+      <div class="slider_rght_item">
+        <h1>Lorem ipsum dolor sit amet</h1>
+        <p>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, dolore magna aliqua. Ut enim ad minim veniam,dolore magna aliqua. Ut enim ad minim veniam,</p>
+        <a href="#">Find out why this freebie rocks! <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+      </div>
     </div>
   </div>
-  <!-- FORE FRONT FINISHED -->
-  <!-- SERVICES STARTED -->
   <div class="services">
-    <div class="width">
+    <div class="services_main">
       <div class="services_item">
-        <div class="service_item_img"></div>
-        <div class="service_item_words">
-          <h1>Responsive</h1>
-          <p>Built using HTML5/CSS3 and jQuery, and built using one of the world's most powerful CSS frameworks available, Bootstrap.</p>
-          <a href="#">READ MORE<i class="fa fa-arrow-circle-right" aria-hidden="true"></i></a>
+        <div class="img"></div>
+        <div class="words">
+          <div class="words_item">
+            <h1>Responsive</h1>
+            <p>Built using HTML5/CSS3 and jQuery, and built using one of the world's most powerful CSS frameworks available, Bootstrap.</p>
+            <a href="#">Read more <i class="fa fa-chevron-circle-right" aria-hidden="true"></i></a>
+          </div>
         </div>
       </div>
       <div class="services_item">
-        <div class="service_item_img"></div>
-        <div class="service_item_words">
-          <h1>Multi-Purpose</h1>
-          <p>Perfect if you run your own start-up, product or service. Boxify can showcase your business converting your visits to income.</p>
-          <a href="#">READ MORE<i class="fa fa-arrow-circle-right" aria-hidden="true"></i></a>
+        <div class="img"></div>
+        <div class="words">
+          <div class="words_item">
+            <h1>Responsive</h1>
+            <p>Built using HTML5/CSS3 and jQuery, and built using one of the world's most powerful CSS frameworks available, Bootstrap.</p>
+            <a href="#">Read more <i class="fa fa-chevron-circle-right" aria-hidden="true"></i></a>
+          </div>
         </div>
       </div>
       <div class="services_item">
-        <div class="service_item_img"></div>
-        <div class="service_item_words">
-          <h1>Absolutely Free</h1>
-          <p>As aways, download Boxify for free exclusively from Codrops. If you love Boxify and want to thank me, simply <a href="#">buy me a beer.</a></p>
-          <a href="#">READ MORE<i class="fa fa-arrow-circle-right" aria-hidden="true"></i></a>
+        <div class="img"></div>
+        <div class="words">
+          <div class="words_item">
+            <h1>Responsive</h1>
+            <p>Built using HTML5/CSS3 and jQuery, and built using one of the world's most powerful CSS frameworks available, Bootstrap.</p>
+            <a href="#">Read more <i class="fa fa-chevron-circle-right" aria-hidden="true"></i></a>
+          </div>
         </div>
       </div>
     </div>
   </div>
-  <!-- SERVICES FINISHED -->
-  <!-- IPHONE STARTED -->
-  <div class="iphone">
-    <div class="width">
-      <div class="iphone_phone"></div>
-      <div class="words">
-        <h2>Showcase your Product or Service</h2>
+  <div class="phone">
+    <div class="phone_item">
+      <div class="phone_item_main">
+        <div class="iphone">
+          <img src="img/iphone-skeleton.png" alt="">
+          <img src="img/device-content-img.jpg" alt="">
+        </div>
+      </div>
+      <div class="phone_words">
+        <h1>Showcase your Product or Service</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a lorem quis neque interdum consequat ut sed sem. Duis quis tempor nunc. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
-        <div class="words_item">
-          <div class="words_item_img"></div>
-          <div class="words_item_words"></div>
+        <div>
+           <img src="img/avatar.png" alt="">
+           <i>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a lorem quis neque interdum consequat ut sed sem. Duis quis tempor nunc." - Peter Finlan</i>
         </div>
-        <div class="codrops"></div>
-        <button>Download!<i class="fa fa-download" aria-hidden="true"></i></button>
+        <img src="img/codrops-logo.png" alt=""><br>
+        <button>Download <i class="fa fa-download" aria-hidden="true"></i></button>
       </div>
     </div>
   </div>
-  <!-- IPHONE FINISHED -->
-  <!-- PACKED STARTED -->
   <div class="packed">
-    <div class="width">
-     <h1>Packed Full of Powerful Features</h1>
-     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a lorem quis neque interdum consequat ut sed sem. Duis quis tempor nunc. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
-     <a href="#">See the screenshots! <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+    <div>
+      <h1>Packed Full of Powerful Features</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a lorem quis neque interdum consequat ut sed sem. Duis quis tempor nunc. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+      <a href="#">See the screenshots! <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
     </div>
   </div>
-  <!-- PACKED FINISHED -->
-  <!-- IMAGES STARTED -->
-  <div class="images"></div>
-  <!-- IMAGES FINISHED -->
-  <!-- SEEN ENOUGH STARTED -->
-  <div class="seen_enough">
-    <h1>Seen Enough?</h1>
-    <button>Download!<i class="fa fa-download" aria-hidden="true"></i></button>
+  <div class="photos">
+    <img src="img/01-screenshot.jpg" alt="">
+    <img src="img/02-screenshot.jpg" alt="">
+    <img src="img/03-screenshot.jpg" alt="">
+    <img src="img/04-screenshot.jpg" alt="">
+    <img src="img/05-screenshot.jpg" alt="">
+    <img src="img/06-screenshot.jpg" alt="">
+    <img src="img/07-screenshot.jpg" alt="">
+    <img src="img/08-screenshot.jpg" alt="">
   </div>
-  <!-- SEEN ENOUGH FINISHED -->
-  <!-- FOOTER STARTED -->
+  <div class="enough">
+    <div>
+      <h1>Seen Enough?</h1>
+      <button>Download <i class="fa fa-download" aria-hidden="true"></i></button>
+    </div>
+  </div>
   <div class="footer">
-    <div class="width">
-     <div class="footer_lft">
-       <div class="footer_lft_img"></div>
-       <p>A free website template created exclusively for <a href="">Codrops</a></p>
-     </div>
-     <div class="footer_rght">
-       <a href="#">ABOUT</a>
-       <a href="#">FEATURES</a>
-       <a href="#">SCREENSHOTS</a>
-       <a href="#">DOWNLOAD</a>
-     </div>
+    <div class="footer_logo">
+      <img src="img/logo-blue.png" alt="">
+      <p>A free website template created exclusively for <a href="#"><i>Codrops</i></a></p>
+    </div>
+    <div class="footer_menu">
+      <ul>
+        <li>ABOUT</li>
+        <li>FEATURES</li>
+        <li>SCREENSHOTS</li>
+        <li>DOWNLOAD</li>
+      </ul>
     </div>
   </div>
-  <!-- FOOTER FINISHED -->
 </body>
 </html>
